--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
-        "@vercel/node": "^3.0.11",
+        "@netlify/functions": "^2.4.0",
         "axios": "^1.6.2"
     }
 }
