--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "build": "tsc"
     },
     "devDependencies": {
+        "@types/node": "^20.9.2",
         "typescript": "^5.2.2"
     },
     "dependencies": {
