--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "devDependencies": {
         "@types/node": "^20.9.2",
+        "netlify-cli": "^17.5.1",
         "typescript": "^5.2.2"
     },
     "dependencies": {
